# src/routes/categories.routes.ts
@@ -1,25 +1,25 @@
 import { Router } from 'express';
 import multer from 'multer';
+import { CreateCategoryController } from '../modules/cars/usecases/createCategory/CreateCategoryController';
+import { ImportCategoryController } from '../modules/cars/usecases/importCategory/ImportCategoryController';
+import { ListCategoriesController } from '../modules/cars/usecases/listCategories/ListCategoriesController';
 
-import createCategoryController from '../modules/cars/usecases/createCategory';
-import { importCategoryController } from '../modules/cars/usecases/importCategory';
-import { listCategoriesController } from '../modules/cars/usecases/listCategories';
+
+
 
 const categoriesRoutes = Router();
 const upload = multer({
   dest: './tmp',
 });
 
-categoriesRoutes.post('/', (req, res) => {
-  return createCategoryController().handle(req, res);
-});
+const createCategoryController = new CreateCategoryController();
+const importCategoryController = new ImportCategoryController();
+const listCategoryController = new ListCategoriesController();
 
-categoriesRoutes.get('/', (req, res) => {
-  return listCategoriesController.handle(req, res);
-});
+categoriesRoutes.post('/', createCategoryController.handle);
 
-categoriesRoutes.post('/import', upload.single('file'), (req, res) => {
-  return importCategoryController.handle(req, res);
-});
+categoriesRoutes.get('/', listCategoryController.handle);
+
+categoriesRoutes.post('/import', upload.single('file'),importCategoryController.handle);
 
 export { categoriesRoutes };
